# AMD-PACE

./: .flake8  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deployguard.yml
benchmarks/llm/accuracy/: README.md  arguments.py  datastructs.py  evaluation.py  evaluation_config.json  evaluation_spec_config.json  lm_model.py
benchmarks/llm/performance/: README.md  arguments.py  benchmark_config.json  benchmark_llm_offline.py  benchmark_spec_config.json  data.py  datastructs.py  metrics.py  test_llm_performance.py  visualization.py
cmake/: BuildFBGEMM.cmake  BuildJITBackend.cmake  BuildLIBXSMM.cmake  ClangFormat.cmake
csrc/: CMakeLists.txt  init.cpp  torch_extension_bindings.cpp  torch_extension_bindings.h
csrc/core/: logging.cpp  logging.h  threading.cpp  threading.h
csrc/graph/: fuse_embedding_bags.cpp  fuse_embedding_bags.h  move_weights_to_memory.cpp  move_weights_to_memory.h  optimize_embedding_bags.cpp  optimize_embedding_bags.h  optimize_for_inference.cpp  optimize_for_inference.h  optimize_qlinear.cpp  optimize_qlinear.h  register.h
csrc/ops/: CMakeLists.txt  attention.cpp  attention.h  binary.cpp  binary.h  cpu.cpp  cpu.h  embeddingbag.cpp  embeddingbag.h  jit_helper.h  libxsmm_linear.cpp  libxsmm_linear.h  linear.cpp  linear.h  mlp.cpp  mlp.h
csrc/ops/kernels/: attention_kernels.cpp  attention_kernels.h  binary_kernels.cpp  binary_kernels.h  binary_kernels_avx512.cpp  embeddingbag_kernel.cpp  embeddingbag_kernel.h  libxsmm_linear_kernel.cpp  libxsmm_linear_kernel.h  linear_kernel.cpp  linear_kernel.h  mlp_kernel.cpp  mlp_kernel.h
csrc/ops/libxsmm_dependency/: common_loops.cpp  tensor_helper.h  threaded_loops.h  utils.h  vla.h  xsmm_functors.h
csrc/pace_tensor/: pace_aten_interface.cpp  pace_aten_interface.h  pace_tensor_impl.cpp  pace_tensor_impl.h  quantize_utils.h
csrc/utils/: graph_utils.h  kernel_utils.h  utils.h  zen_utils.h
docs/: Contributing.md  CoreFunctions.md  DLRMv2.md  InferenceServer.md  LLM.md  Ops.md  PerformanceGuide.md  Plugin.md  PythonOps.md  SpeculativeDecoding.md
examples/: multi_instance_pace.py  multi_instance_sd_pace.py  pace_llm_basic.py  pace_llm_pard.py  pace_llm_streamer.py  pace_server_basic.py
pace/: __init__.py
pace/graph/: __init__.py  graph_utils.py  optimize.py  qlinear.py  quantized_patterns.py  remove_alias.py
pace/llm/: __init__.py  cache.py  configs.py  generator.py  llm.py  ops.py  outputs.py  sampler.py  stopping_criteria.py
pace/llm/models/: __init__.py  base_model.py  gptj.py  hf_utils.py  llama.py  model_list.py  model_utils.py  opt.py  phi3.py  qwen2.py
pace/ops/: __init__.py  activations.py  attention.py  base.py  enum.py  fused_linear.py  linear.py  mlp.py  normalization.py  registry.py  rotary_embedding.py
pace/ops/backends/: __init__.py  imbps.py  jit.py  native.py  tpp.py
pace/server/: launcher.py  model_list.py  router.py  server.py
pace/utils/: __init__.py  inference_dataset.py  logging.py  worker.py
tests/: README.md  test_utils.py
tests/llm_infra/: test_cache.py  test_configs.py  test_generator.py  test_models.py  test_sampler.py  test_stopping_criteria.py
tests/ops/: test_LIBXSMMLinear.py  test_binary.py  test_embeddingbag.py  test_linear.py  test_mlp_mlp_fusion.py  test_sdpa.py
tests/python_ops/: __init__.py  test_activations.py  test_attention.py  test_fused_linear.py  test_linear.py  test_merged_mlp.py  test_normalization.py  test_registry.py
